--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
 
       <!-- List of all stories -->
       <ol id="all-stories-list" class="stories-list"></ol>
+
+      <!-- List of favorite stories -->
+      <ul id="favorite-stories-list" class="stories-list"></ul>
     </section>
 
     <!-- Login and signup forms -->
